--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Page</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="index.js"></script>
 </hmtl>
 <body>
     <header>
@@ -14,7 +15,10 @@
     <main>
         <img src="img/téléchargé.png" alt="skin minecraft" >
         <p>bienvenue sur mon site </p>
+        <button id="copyEmailBtn" onclick="copyEmail()">Copier mon email</button>
     </main>
     <footer>
         <p>&copy; 2023 My Web Page</p>
     </footer>
+</body>
+</html>
