Add social media icons to footer
Added Behance, YouTube, and LinkedIn icons with links to the footer in index.html. Updated footer styling in styles.css for layout and icon appearance. Updated copyright year to 2025.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <button id="copyEmailBtn" onclick="copyEmail()">Copier mon email</button>
     </main>
     <footer>
-        <p>&copy; 2023 My Web Page</p>
+        <p>&copy; 2025 My Web Page</p>
+        <a href="https://www.behance.net/bananaxmog"><img src="img/145799.png" alt=""></a>
+        <a href="https://www.youtube.com/@el_arlequino"><img src="img/images.png" alt=""></a>
+        <a href="https://www.linkedin.com/in/max-lefebvre-0732b7270/"><img src="img/logo-linkedin.png" alt=""></a>
     </footer>
 </body>
 </html>
