--- a/index.html
+++ b/index.html
@@ -1,27 +1,44 @@
 <hmtl>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Page</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="index.js"></script>
-</hmtl>
-<body>
-    <header>
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>My Web Page</title>
+      <meta
+        name="description"
+        content="Bienvenue sur mon site personnel ! Découvrez mon univers, mes réseaux et contactez-moi facilement."
+      />
+      <meta name="author" content="Max Lefebvre" />
+      <meta
+        name="keywords"
+        content="portfolio, Max Lefebvre, Minecraft, Behance, YouTube, LinkedIn, contact"
+      />
+      <link rel="stylesheet" href="styles.css" />
+      <script src="index.js"></script>
+    </head>
+    <body>
+      <header>
         <h1>bonjour !</h1>
-    </header>
-    <main>
-        <img src="img/téléchargé.png" alt="skin minecraft" >
-        <p>bienvenue sur mon site </p>
-        <button id="copyEmailBtn" onclick="copyEmail()">Copier mon email</button>
-    </main>
-    <footer>
+      </header>
+      <main>
+        <img src="img/téléchargé.png" alt="skin minecraft" />
+        <p>bienvenue sur mon site</p>
+        <button id="copyEmailBtn" onclick="copyEmail()">
+          Copier mon email
+        </button>
+      </main>
+      <footer>
         <p>&copy; 2025 My Web Page</p>
-        <a href="https://www.behance.net/bananaxmog"><img src="img/145799.png" alt=""></a>
-        <a href="https://www.youtube.com/@el_arlequino"><img src="img/images.png" alt=""></a>
-        <a href="https://www.linkedin.com/in/max-lefebvre-0732b7270/"><img src="img/logo-linkedin.png" alt=""></a>
-    </footer>
-</body>
-</html>
+        <a href="https://www.behance.net/bananaxmog"
+          ><img src="img/145799.png" alt=""
+        /></a>
+        <a href="https://www.youtube.com/@el_arlequino"
+          ><img src="img/images.png" alt=""
+        /></a>
+        <a href="https://www.linkedin.com/in/max-lefebvre-0732b7270/"
+          ><img src="img/logo-linkedin.png" alt=""
+        /></a>
+      </footer>
+    </body></html
+></hmtl>
