--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>My Web Page</title>
+      <link rel="icon" href="img/face.png" />
       <meta
         name="description"
         content="Bienvenue sur mon site personnel ! Découvrez mon univers, mes réseaux et contactez-moi facilement."
