--- a/index.html
+++ b/index.html
@@ -41,5 +41,50 @@
           ><img src="img/logo-linkedin.png" alt=""
         /></a>
       </footer>
-    </body></html
-></hmtl>
+      <style>
+        body {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          height: 100vh;
+          background-color: #0f0f0f;
+          color: aliceblue;
+          text-align: center;
+        }
+        footer {
+          position: fixed;
+          bottom: 0;
+          width: 100%;
+          text-align: center;
+          padding: 10px;
+          background-color: #1a1a1a;
+          color: #ccc;
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+        }
+        footer img {
+          height: 24px;
+          margin: 8px;
+        }
+        button#copyEmailBtn {
+          background-color: #f6bd38;
+          color: white;
+          border: none;
+          padding: 12px 24px;
+          border-radius: 6px;
+          font-size: 1rem;
+          cursor: pointer;
+          margin-top: 16px;
+        }
+
+        button#copyEmailBtn:hover {
+          background-color: #f6ff94;
+          color: chocolate;
+        }
+      </style>
+    </body>
+  </html></hmtl
+>
