--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
           color: chocolate;
         }
       </style>
+      <script>
+        function copyEmail() {
+          const email = "maxlefebvre2005@gmail.com"; // Remplace par ton email
+        }
+      </script>
     </body>
   </html></hmtl
 >
