--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         /></a>
       </footer>
       <style>
+        .box {
+          opacity: 0.8;
+        }
         body {
           display: flex;
           flex-direction: column;
