Refactor email copy logic and update GSAP animation
Moved the GSAP animation and email copy logic from inline HTML script to src/index.js. Updated the animation to target #copyEmailBtn and removed unused code from index.html for better separation of concerns.

--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
         name="keywords"
         content="portfolio, Max Lefebvre, Minecraft, Behance, YouTube, LinkedIn, contact"
       />
-      <link rel="stylesheet" href="styles.css" />
-      <script src="index.js"></script>
     </head>
     <body>
       <header>
         <h1>bonjour !</h1>
       </header>
       <main>
-        <img src="img/téléchargé.png" alt="skin minecraft" />
+        <img class="mon_img" src="img/téléchargé.png" alt="skin minecraft" />
         <p>bienvenue sur mon site</p>
         <button class="box" id="copyEmailBtn" onclick="copyEmail()">
           Copier mon email
@@ -88,17 +86,6 @@
           color: chocolate;
         }
       </style>
-      <script>
-        gsap.to(".box", {
-          duration: 2,
-          rotation: 360,
-          backgroundColor: "#9d95ff",
-        });
-
-        function copyEmail() {
-          const email = "maxlefebvre2005@gmail.com"; // Remplace par ton email
-        }
-      </script>
-    </body>
-  </html></hmtl
->
+      <script></script>
+    </body></html
+></hmtl>
